<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trux</string>
    <string name="main_screen_help">To login, please fill in your username and password
    in the corresponding fields. Click on the Login button.\nIf you miss one, please click
    on the Register button to create an account.\nHave a nice day!</string>
    <string name="driver_home_screen_help">Standard Mode.\n
        In the standard mode you can access the following features.\n
        Messaging.\n
        Statistics.\n
        Map view.\n
        Profile.\n
        Adding/Accepting friends.\n
        Driving Mode.\n
        In driving mode some features are disabled to insure driver safety.</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact us</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="autoLogin">Keep me logged in</string>
    <string name="title_activity_register">Register</string>
    <string name="speed_button_text">Speed</string>
    <string name="fuel_button_text">Fuel</string>
    <string name="distance_traveled_text">Distance</string>
    <string name="title_activity_speed">Speed</string>
    <string name="coming_soon_text">COMING SOON</string>
    <string name="collecting_data">COLLECTING DATA</string>
    <string name="overall_statistics_text">Overall Statistics</string>
    <string name="compare_statistics_text">Compare Statistics</string>
    <string name="community_text">Community</string>
    <string name="friend_requests">FRIEND REQUESTS</string>
    <string name="friends">FRIENDS</string>
    <string name="no_friends">No friends found.</string>
    <string name="search_hint">SEARCH HERE</string>
    <string name="pending">Pending...</string>
    <string name="cancel">cancel</string>
    <string name="edit">edit</string>
    <string name="save">save changes</string>
    <string name="send">send</string>
    <string name="new_message">new message</string>
    <string name="change_profile_pic">change profile picture</string>
    <string name="statistics_text">Statistics</string>
    <string name="profile_text">Profile</string>
    <string name="title_activity_fuel">Fuel</string>
    <string name="user_name_title">Username:</string>
    <string name="first_name_title">First Name:</string>
    <string name="last_name_title">Last Name:</string>
    <string name="email_title">E-Mail:</string>
    <string name="password_title">Password:</string>
    <string name="ver_password_title">Repeat Password:</string>
    <string name="agree_button_title">I agree to the Terms and Conditions of Use</string>
    <string name="register_button_title">Register</string>
    <string name="average_today">Average Today:</string>
    <string name="average_lastweek">Average This Week:</string>
    <string name="average_lastmonth">Average This Month:</string>
    <string name="average_total">Average Total:</string>
    <string name="today">Today:</string>
    <string name="last_week">This Week:</string>
    <string name="last_month">This Month:</string>
    <string name="total">Total:</string>
    <string name="title_activity_distance">Distance</string>
    <string name="title_activity_simple_stats">SimpleStats</string>
    <string name="title_activity_overall_stats">OverallStats</string>
    <string name="average_speed">Average Speed:</string>
    <string name="average_fuel">Average Fuel:</string>
    <string name="average_distance_traveled">Average Distance:</string>
    <string name="title_activity_choose_stat_screen">ChooseStatScreen</string>
    <string name="title_activity_stats_windows">StatsWindows</string>
    <string name="loading">Loading...</string>
    <string name="contact">Here we will have information about the contact</string>
    <string name="about">Here we will have information about the application</string>
    <string name="title_activity_item_menu">ItemMenu</string>
    <string name="settings">Here we will have settings later</string>
    <string name="action_help">Help</string>
    <string name="title_activity_community_main">Community_main</string>
    <string name="remove_dialog_message">Do you want to remove friend?</string>
    <string name="community_remove">Remove Friend</string>
    <string name="decline">Cancel</string>
    <string name="title_activity_fragment_page_adapter_community">FragmentPageAdapterCommunity</string>
    <string name="title_activity_test_map">TestMap</string>
    <string name="welcome">Welcome to Trux!</string>
    <string name="welcomeMessage">A community for truck drivers.</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_friends_window">FriendsWindow</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile_button_edit_text">Edit</string>
    <string name="speed_graph_explanation">
        The graph shows your average speed over the last thirty days.
            \nBased on km/h.
    </string>
    <string name="distance_graph_explanation">
        The graph shows your average distance traveled over the last thirty days.
            \nShown in km.
    </string>
    <string name="fuel_graph_explanation">
        The graph shows your average fuel consumption over the last thirty days.
            \nBased on litres/h.
    </string>
    <string name="speed_title">SPEED</string>
    <string name="fuel_title">FUEL</string>
    <string name="distance_title">DISTANCE</string>
    <string name="noData">No data found for this user.</string>
    <string name="contact_name">Name</string>
    <string name="contact_title">Contact us</string>
    <string name="contact_email">Email</string>
    <string name="feedback_body">Your feedback</string>
    <string name="feedbacktype">Enter your feedback type</string>
    <string name="feedbacktype1">Reset Password</string>
    <string name="feedbacktype2">Constructive suggestion</string>
    <string name="feedbacktype3">Report service issues</string>
    <string name="feedbackbutton">Send Feedback</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
