<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.gu.tux.trux.Stats">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="3">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:weightSum="3">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/speed_button_text"
                    android:id="@+id/speed_button_text"
                    android:layout_weight="1"
                    android:onClick="goToSpeed"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/fuel_button_text"
                    android:id="@+id/fuel_button"
                    android:layout_weight="1"
                    android:onClick="goToFuel"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/distance_traveled_text"
                    android:id="@+id/distance_traveled_text"
                    android:layout_weight="1"
                    android:onClick="goToDistanceTraveled"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/coming_soon_text"
                    android:id="@+id/button6"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/coming_soon_text"
                    android:id="@+id/button7"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/coming_soon_text"
                    android:id="@+id/button8"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/overall_statistics_text"
            android:id="@+id/overall_statistics"
            android:layout_weight="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/compare_statistics_text"
            android:id="@+id/compare_statistics"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
