<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/average_today"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="15sp"
            android:layout_weight="2"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/average_lastweek"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="15sp"
            android:layout_weight="2"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/average_lastmonth"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="15sp"
            android:layout_weight="2"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/graph_view_container_fuel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">

    </LinearLayout>

</LinearLayout>
