<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.gu.tux.trux.gui.DriverHomeScreen"
    android:id="@+id/layout"
    android:padding="5dp"
    android:background="#E0E0E0">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="2">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/community_text"
            android:id="@+id/communityBtn"
            android:background="#3D3D3D"
            android:textColor="#E0E0E0"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/profile_text"
                android:id="@+id/profileBtn"
                android:background="#3D3D3D"
                android:textColor="#E0E0E0"
                android:layout_weight="1"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/statistics_text"
                android:id="@+id/statsBtn"
                android:background="#3D3D3D"
                android:textColor="#E0E0E0"
                android:layout_weight="1"
                android:onClick="goToStats"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
