<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.gu.tux.trux.gui.Distance_Traveled_Window">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_today"
        android:id="@+id/avg_today_distance_traveled"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:textColor="#ff000000" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_lastweek"
        android:id="@+id/avg_lastweek_distance_traveled"
        android:textSize="20dp"
        android:textColor="#ff000000"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/avg_today_distance_traveled"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_lastmonth"
        android:id="@+id/avg_lastmonth_distance_traveled"
        android:textSize="20dp"
        android:textColor="#ff000000"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/avg_lastweek_distance_traveled"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_total"
        android:id="@+id/avg_total_fuel"
        android:textSize="20dp"
        android:textColor="#ff000000"
        android:layout_below="@+id/avg_lastmonth_distance_traveled"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50"
        android:id="@+id/avg_today_distance_traveled_value"
        android:layout_alignBottom="@+id/avg_today_distance_traveled"
        android:layout_alignStart="@+id/avg_lastweek_distance_traveled_value"
        android:textSize="20dp"
        android:textColor="#ff000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50"
        android:id="@+id/avg_lastweek_distance_traveled_value"
        android:layout_above="@+id/avg_lastmonth_distance_traveled"
        android:layout_toEndOf="@+id/avg_lastmonth_distance_traveled"
        android:layout_marginStart="62dp"
        android:textSize="20dp"
        android:textColor="#ff000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="80"
        android:id="@+id/avg_lastmonth_distance_traveled_value"
        android:layout_alignTop="@+id/avg_lastmonth_distance_traveled"
        android:layout_alignStart="@+id/avg_lastweek_distance_traveled_value"
        android:textSize="20dp"
        android:textColor="#ff000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="65"
        android:id="@+id/avg_total_fuel_value"
        android:layout_alignTop="@+id/avg_total_fuel"
        android:layout_alignStart="@+id/avg_lastmonth_distance_traveled_value"
        android:textSize="20dp"
        android:textColor="#ff000000"/>

</RelativeLayout>
