<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="se.gu.tux.trux.gui.detailedStats.SpeedWindow">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dip"
        android:padding="10dip"
        android:background="@drawable/custom_border"
        android:weightSum="2">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="4"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background= "#FF3D3D3D"
                android:layout_margin="5dp"
                android:padding="5dip"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_today"
                    android:id="@+id/avg_today_speed"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:id="@+id/avg_today_speed_value"
                    android:layout_alignBottom="@+id/avg_today_speed"
                    android:layout_alignStart="@+id/avg_lastweek_speed_value"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background= "#FF3D3D3D"
                android:layout_margin="5dp"
                android:padding="5dip"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_lastweek"
                    android:id="@+id/avg_lastweek_speed"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:id="@+id/avg_lastweek_speed_value"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background= "#FF3D3D3D"
                android:layout_margin="5dp"
                android:padding="5dip"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_lastmonth"
                    android:id="@+id/avg_lastmonth_speed"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:id="@+id/avg_lastmonth_speed_value"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background= "#FF3D3D3D"
                android:layout_margin="5dp"
                android:padding="5dip"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_total"
                    android:id="@+id/avg_total_speed"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:id="@+id/avg_total_speed_value"
                    android:textSize="15sp"
                    android:textColor="#E0E0E0"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/SpeedGraph"
        android:layout_weight="1">
    </LinearLayout>

    </LinearLayout>

</FrameLayout>
